Basic Vue added.

--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <script type="module" src="/src/index.ts"></script>
+    <div id="app"></div>
     <div>Counter: <span id="counter">0</span></div>
     <button onclick="window.increment()">Increment</button>
   </body>
